# particle_pattern

./: .gitignore  README.md  main.py  main_v2.py  pyproject.toml  requirements.txt
particle_pattern/: main.py  run_sim.py  simulation.py
